--- a/pom.xml
+++ b/pom.xml
@@ -8,11 +8,11 @@
 	<packaging>jar</packaging>
 
 	<name>maven-stanalone-application</name>
-	<url>http://mylandmarktech.com</url>
+	<url>http://Fortress Technologies.com</url>
 
 	<organization>
-		<name>Mithun Technologies</name>
-		<url>http://mylandmarktech.com/</url>
+		<name>Fortress Technologies Inc.</name>
+		<url>http://Fortresstech.com/</url>
 	</organization>
 	
 	<description>Maven Standalone Application</description>
@@ -31,23 +31,34 @@
 			<artifactId>junit</artifactId>
 			<version>3.8.1</version>
 			<scope>test</scope>
-		</dependency>
-
+		</dependency>	
+		<dependency>
+    			<groupId>org.seleniumhq.selenium</groupId>
+    			<artifactId>selenium-java</artifactId>
+    			<version>4.6.0</version>
+			<scope>test</scope>
+  		</dependency>
+		<dependency>
+    			<groupId>log4j</groupId>
+    			<artifactId>log4j</artifactId>
+    			<version>1.2.17</version>
+			<scope>test</scope>
+  		</dependency>
 	</dependencies>
 
 	<!-- Committing and updating changes through Maven, by using below mvn command. 
 		For Commiting mvn -Dmessage="Updated using maven" scm:checkin For updating 
 		mvn scm:update -->
 	<scm>
-		<connection>scm:git:https://github.com/LandmarkTechnology/maven-standalone-application</connection>
-		<developerConnection>scm:git:https://github.com/LandmarkTechnology/maven-standalone-application</developerConnection>
+		<connection>scm:git:https://github.com/FortressTechnology/maven-standalone-application</connection>
+		<developerConnection>scm:git:https://github.com/FortressTechnology/maven-standalone-application</developerConnection>
 		<tag>HEAD</tag>
-		<url>https://github.com/LandmarkTechnology/maven-standalone-application</url>
+		<url>https://github.com/FortressTechnology/maven-standalone-application</url>
 	</scm>
 
 	<issueManagement>
 		<system>GitHub</system>
-		<url>https://github.com/LandmarkTechnology/maven-standalone-application/issues</url>
+		<url>https://github.com/FortressTechnology/maven-standalone-application/issues</url>
 	</issueManagement>
 
 	
